:zap: Add SMTP settings to appsettings.json
Added email configuration settings for SMTP.

--- a/BlogApplication.API/appsettings.json
+++ b/BlogApplication.API/appsettings.json
@@ -14,5 +14,14 @@
     "Key": "cdOM5i6caKxAZs8xlgKTehYXh2PAxZb1",
     "Issuer": "BlogApplication",
     "Audience": "BlogApplicationUsers"
-  }
+  },
+  "Email": {
+    "SmtpHost": "smtp.example.com",
+    "SmtpPort": "2525",
+    "SmtpUser": "mail@example.com",
+    "SmtpPass": "your-super-secret-smtp-password",
+    "FromEmail": "no-reply@example.com",
+    "FromName": "Tech Studio Blog"
+  },
+  "AppUrl": "https://localhost:7030"
 }
